# web_hw_5

./: 06_client.py  main.py  pyproject.toml
